5/18/11 implement SeriesCircuit.getVoltageAt for battery and plates
5/18/11 fix: rewire CircuitChangeListener in EFieldDetector.setCircuit and BarMeter.setCircuit
5/18/11 implement ParallelCircuit.getVoltageAt for battery and plates
5/18/11 fix: rewire CircuitChangeListener in Voltmeter.setCircuit
5/18/11 simplify SingleCircuit.getVoltageAt
5/18/11 add Battery.intersectsBottomTerminal
5/18/11 partition model into subpackages
5/17/11 attempt to show circuit layouts in javadoc
5/17/11 add circuits for series-parallel combinations
5/17/11 tweak plate size and capacitor spacing so that 3 series and parallel capacitors fit in the play area
5/17/11 add parallel circuits
5/17/11 populate series circuit with capacitors
5/17/11 first pass at Series circuits (not populated with capacitors yet)
5/17/11 create NullCircuit and NullCircuitNode, placeholders for circuits that haven't been implemented yet
5/17/11 create base class for circuit nodes, AbstractCircuitNode
5/17/11 move lots of stuff to AbstractCircuit
5/17/11 add ICircuit.getCapacitors, create skeleton of SeriesCircuit, identify things to move to AbstractCircuit
5/17/11 move battery and listeners to AbstractCircuit
5/17/11 create SingleCircuitNode, add factory method for creating circuit nodes
5/17/11 rename BatteryCapacitorCircuit to SingleCircuit
5/17/11 attach charge and E-field visibility properties to control panel
5/17/11 fix EFieldNode.getLineSpacing for effectiveEField=0
5/17/11 consolidate model constants in MultipleCapacitorsModel for now
5/17/11 add capacitance control (reuse plate charge slider and bar meter value display)
5/16/11 reuse BatteryCapacitorCircuit as "single" circuit in Multi Capacitors tab, display battery and capacitor (no wires or capacitance control yet)
5/16/11 move creation of battery and capacitor into BatteryCapacitorCircuit, so that this can be our "single capacitor" circuit
5/16/11 add Capacitor.setCapacitance, which calculates and sets plate separation